--- a/finalproject/Css/final.css
+++ b/finalproject/Css/final.css
@@ -45,10 +45,17 @@
 }
 
 #section {
-    width: 200px;
     text-align: left;
     height: 800px;
     padding: 10px;
+}
+
+.p1{
+    border:1px solid;
+    height:800px;
+    width:800px;
+    float: left;
+    text-align: center;
 }
 
 #footer {
